--- a/src/components/home/HomeStyles.scss
+++ b/src/components/home/HomeStyles.scss
@@ -1,18 +1,23 @@
 .home-component {
+    margin: 30px 10% 0 10%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     height: 70vh;
+    width: 100%;
     background-image: url('../icons/images/desktop-image-hero-1.jpg');
     // background-position: center;
+    background-size: contain;
     background-repeat: no-repeat;
 }
 
 .navbar {
+    width: 80%;
     display: flex;
     padding-top: 20px;
-    margin-left: 30px;
 
     a{
         text-decoration: none;
-        margin-left: 20px;
+        margin-left: 40px;
         color: white;
     }
 
@@ -20,4 +25,8 @@
         font-size: 25px;
         font-weight: 900;
     }
+}
+
+.home-discover {
+    width: 70%;
 }
