--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,29 @@
-body {
-    padding: 0;
-    margin: 0;
+:root {
+    --primary: #ddd;
+    --dark: #333;
+    --light: #fff;
+}
+
+html {
     box-sizing: border-box;
-    background-color: black;
-    overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--dark);
+}
+
+body {
+    background: #ccc;
+    margin: 30px 50px;
+    line-height: 1.4;
+}
+
+.btn {
+    background: var(--dark);
+    color: var(--light);
+    padding: 0.6rem 1.3rem;
+    text-decoration: none;
+    border: 0;
+}
+
+img {
+    max-width: 100%;
 }
