--- a/src/components/home/HomeStyles.scss
+++ b/src/components/home/HomeStyles.scss
@@ -1,5 +1,5 @@
 .home-component {
-    margin: 30px 10% 0 10%;
+    // margin: 30px 40px 0 40px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 70vh;
@@ -7,6 +7,7 @@
     background-image: url('../icons/images/desktop-image-hero-1.jpg');
     // background-position: center;
     background-size: contain;
+    overflow: hidden;
     background-repeat: no-repeat;
 }
 
