--- a/src/components/discover/Discover.scss
+++ b/src/components/discover/Discover.scss
@@ -1,5 +1,23 @@
 .discover {
     background-color: white;
-    height: 70vh;
-    width: 100%;
+    height: 25rem;
+    width: 587px;
+}
+
+.arrow {
+    margin-left: 30px;
+}
+
+.discover-title {
+    font-size: 40px;
+    font-weight: 900;
+}
+
+.discover-header {
+    padding: 40px 40px 0 40px;
+}
+
+.discover-carrowsel {
+    font-size: 40px;
+    font-weight: bold;
 }
