--- a/src/components/home/HomeStyles.scss
+++ b/src/components/home/HomeStyles.scss
@@ -56,3 +56,10 @@
         background-color: white;
     }
 }
+
+@media screen and (max-width: '650px') {
+    .home-combine {
+        display: flex;
+        flex-direction: column;
+    }
+}
