--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,14 @@ body {
 img {
     max-width: 100%;
 }
+.btn {
+    background: var(--dark);
+    color: var(--light);
+    padding: 0.6rem 1.3rem;
+    text-decoration: none;
+    border: 0;
+}
+
+img {
+    max-width: 100%;
+}
