--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --primary: #ddd;
     --dark: #333;
     --light: #fff;
@@ -37,4 +37,4 @@ img {
 
 img {
     max-width: 100%;
-}
+} */
